[tool.poetry]
name = "kline"
version = "0.4.3"
description = ""
authors = ["narumi"]

[tool.poetry.dependencies]
python = "^3.8"
ccxt = "^4.1.10"
click = "^8.1.3"
loguru = "^0.6.0"
pandas = "^1.4.3"
pydantic = "^2.5.2"

[tool.poetry.group.dev.dependencies]
toml = "^0.10.2"
pytest = "^7.1.2"
isort = "^5.10.1"
flake8 = "^4.0.1"
black = "^23.9.1"
pytest-cov = "^4.1.0"

[tool.poetry.scripts]
kline = "kline.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
