[tool.poetry]
name = "kline"
version = "0.4.4"
description = ""
authors = ["narumi"]

[tool.poetry.dependencies]
python = "^3.8"
ccxt = "^4.1.10"
click = "^8.1.3"
loguru = "^0.6.0"
pandas = "^1.4.3"
pydantic = "^2.5.2"

[tool.poetry.group.dev.dependencies]
toml = "^0.10.2"
pytest = "^7.1.2"
pytest-cov = "^4.1.0"
ruff = "^0.4.4"

[tool.poetry.scripts]
kline = "kline.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = ["build"]
line-length = 120

[tool.ruff.lint]
select = [
    "B", # flake8-bugbear
    "C", # flake8-comprehensions
    "E", # pycodestyle errors
    "F", # pyflakes
    "I", # isort
    "W", # pycodestyle warnings
    # "UP", # pyupgrade
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.ruff.lint.isort]
force-single-line = true
# https://github.com/astral-sh/ruff/issues/10519
known-third-party = ["wandb"]

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]