[project]
name = "kline"
version = "0.5.0"
description = ""
readme = "README.md"
authors = [{ name = "narumi", email = "toucans-cutouts0f@icloud.com" }]
requires-python = ">=3.10"
dependencies = [
    "ccxt>=4.4.46",
    "click>=8.1.7",
    "httpx>=0.28.1",
    "loguru>=0.7.2",
    "pandas>=2.2.3",
    "pydantic>=2.10.0",
]

[project.scripts]
kline = "kline.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pytest>=8.3.3",
    "pytest-cov>=6.0.0",
    "ruff>=0.7.4",
    "pandas-stubs>=2.2.3.241126",
    "pip>=24.3.1",
    "types-requests>=2.32.0.20241016",
    "types-python-dateutil>=2.9.0.20241206",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
]

[tool.ruff]
exclude = ["build"]
line-length = 120

[tool.ruff.lint]
select = [
    "B",  # flake8-bugbear
    "C",  # flake8-comprehensions
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "UP", # pyupgrade
    "W",  # pycodestyle warnings
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.ruff.lint.isort]
force-single-line = true
# https://github.com/astral-sh/ruff/issues/10519
known-third-party = ["wandb"]

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
ignore_missing_imports = true
